necessary comments added + few layout bugs fixed

--- a/main.css
+++ b/main.css
@@ -5,6 +5,8 @@
   --f: #1d1e23;
 }
 
+/* ГОСПОДЬ ПРОСТИ ЗА ЭТУ ВЁРСТКУ */
+
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 0;
@@ -61,7 +63,7 @@ h3 {
   top: 20px;
   right: 20px;
   width: 300px;
-  height: calc(100vh - 40px);
+  height: calc(100vh - 40px - 20px);
   background: var(--f);
   border-radius: 150px;
   overflow: hidden;
